# handwave

./: .gitignore  README.md  example.ipynb  package-lock.json  package.json  pyproject.toml
examples/notebook/: example.ipynb
examples/shiny/: app.py
js/: widget.css  widget.ts
src/handwave/: __init__.py
